JDK17 fixes for Phoenix tests